--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -6,18 +6,13 @@ services:
       dockerfile: Dockerfile
     volumes:
       - ../..:/workspaces:cached
-    ports:
-      - ${PORT:-8080}:8080
-      - 5000:5000
-      - 5001:5001
     command: sleep infinity
+    network_mode: service:db
   db:
     image: postgres:14.3
     restart: unless-stopped
     volumes:
       - postgres-data:/var/lib/postgresql/data
-    ports:
-      - 5432:5432
     environment:
       POSTGRES_PASSWORD: postgres
       POSTGRES_USER: postgres
